Switching to gpt-4o-mini

--- a/requirements.txt
+++ b/requirements.txt
@@ -9,19 +9,18 @@ streamlit==1.31.1
 llama-index==0.12.3
 llama-index-core==0.12.3
 llama-index-vector-stores-chroma==0.4.1
-llama-index-embeddings-huggingface==0.3.1
-llama-index-llms-llama-cpp==0.3.0
+llama-index-embeddings-huggingface==0.4.0
+
+# OpenAI
+openai>=1.0.0
 
 # Vector DB
-chromadb==0.4.24
+chromadb==0.5.17
 
 # PDF parsing
-pypdf==4.2.0
+pypdf
 
 # Embeddings
 transformers==4.36.2
 sentence-transformers==2.7.0
 torch==2.1.2
-
-# Local LLM
-llama-cpp-python==0.2.56
